Fix back button alignment

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -102,7 +102,8 @@ img {
 .back-button-container {
   display: inline-block;
   margin-left: 1em;
-  margin-top: 1em;
+  position: absolute;
+  z-index: 1;
 
   #backwards_button {
     font-size: 2em;
